--- a/Practicals/02_python_intro/python_intro.ipynb
+++ b/Practicals/02_python_intro/python_intro.ipynb
@@ -3672,14 +3672,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-10T09:06:07.980539Z",
      "start_time": "2020-11-10T09:06:06.083615Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your input was doubled:      bb\n"
+     ]
+    }
+   ],
    "source": [
     "my_input = input('Give me some input please:   ')\n",
     "\n",
@@ -3699,11 +3707,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-06T17:36:35.434793Z",
      "start_time": "2020-10-06T17:36:35.419723Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def child_calculator():\n",
+    "    a=100\n",
+    "    b=100\n",
+    "    correction=''\n",
+    "    while a+b>100:\n",
+    "        a=random.randint(0,100)\n",
+    "        b=random.randint(0,100)\n",
+    "\n",
+    "    my_input = int(input(f'How much is it {a} + {b} ?   '))\n",
+    "    if int(my_input)==a+b:\n",
+    "        correction='Correct'\n",
+    "    else:\n",
+    "        correction='Incorrect'\n",
+    "    print(f'Your answer is:      {correction}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-06T17:36:47.150139Z",
+     "start_time": "2020-10-06T17:36:36.247412Z"
     }
    },
    "outputs": [
@@ -3711,43 +3748,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45 42\n"
+      "Your answer is:      Correct\n"
      ]
     }
    ],
-   "source": [
-    "#PREGUNTAR OSCAR\n",
-    "import random\n",
-    "\n",
-    "child_calculator(\n",
-    "a=100\n",
-    "b=100\n",
-    "correction=''\n",
-    "while a+b>100:\n",
-    "    a=random.randint(0,100)\n",
-    "    b=random.randint(0,100)\n",
-    "\n",
-    "my_input = input('How much it is the sum?   ')\n",
-    "if my_input==a+b:\n",
-    "    correction='Correct'\n",
-    "else:\n",
-    "    correction='Incorrect'\n",
-    "print(f'Your answer is:      {correction}')\n",
-    "print(a, b)\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-06T17:36:47.150139Z",
-     "start_time": "2020-10-06T17:36:36.247412Z"
-    }
-   },
-   "outputs": [],
    "source": [
     "child_calculator()"
    ]
@@ -4497,11 +4501,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data[\u001b[39m'\u001b[39m\u001b[39mTIME\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(data[\u001b[39m'\u001b[39m\u001b[39mTIME\u001b[39m\u001b[39m'\u001b[39m], \u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY-\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm-\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mdt\u001b[39m.\u001b[39mdate\n\u001b[1;32m      2\u001b[0m  \u001b[39m#.dt.date its only necessary so the time do not appears\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(data[\u001b[39m'\u001b[39m\u001b[39mTIME\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#DEMANAR SILVIA"
+    "data['TIME'] = pd.to_datetime(data['TIME'], format='%Y-%m-%d').dt.date\n",
+    " #.dt.date its only necessary so the time do not appears\n",
+    "print(data['TIME'][0])"
    ]
   },
   {
@@ -5206,7 +5224,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#DEMANAR SILVIA"
+    "cash = data[data['NAME_CONTRACT_TYPE']=='Cash loans'].groupby('MONTH').agg(\n",
+    "     bad_cnt = ('TARGET', sum),\n",
+    "    tot_cnt = ('TARGET', len)\n",
+    ")\n",
+    "\n",
+    "cash['cash_loan_default_rate'] = cash['bad_cnt']/cash['tot_cnt']\n",
+    "\n",
+    "rev = data[data['NAME_CONTRACT_TYPE']=='Revolving loans'].groupby('MONTH').agg(\n",
+    "     bad_cnt = ('TARGET', sum),\n",
+    "    tot_cnt = ('TARGET', len)\n",
+    ")\n",
+    "\n",
+    "rev['rev_loan_default_rate'] = rev['bad_cnt']/rev['tot_cnt']\n",
+    "\n",
+    "#creem el dataframe amb tota la info\n",
+    "\n",
+    "data_frame = pd.merge(cash[['cash_loan_default_rate']], rev[['rev_loan_default_rate']], left_index= True, right_index= True)\n",
+    "#doble braquet perq nomes es mostrin aquestes dues columnes\n",
+    "print(data_frame)"
    ]
   },
   {
